[package]
name = "co2-metrics-exporter"
version = "0.1.0"
authors = ["Jan Gosmann <jan@hyper-world.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
lazy_static = "1.4.0"
nb = "1.0.0"
rppal = { version = "0.11.3", features = ["hal"] }
