[package]
name = "mh-z19c"
version = "0.2.0"
authors = ["Jan Gosmann <jan@hyper-world.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Pure rust implementation to read out the Winsen MH-Z19C CO2 sensor."
repository = "https://github.com/jgosmann/mh-z19c"
readme = "README.md"
keywords = ["CO2", "sensor"]
categories = ["embedded"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []

[dependencies]
embedded-hal = "0.2.4"
lazy_static = "1.4.0"
nb = "1.0.0"

[dev-dependencies]
test_support = { path = "test_support" }
