[package]
authors = ["Jan Gosmann <jan@hyper-world.de>"]
categories = ["embedded"]
description = "Pure rust implementation to read out the Winsen MH-Z19C CO2 sensor."
edition = "2018"
keywords = ["CO2", "sensor"]
license = "MIT OR Apache-2.0"
name = "mh-z19c"
readme = "README.md"
repository = "https://github.com/jgosmann/mh-z19c"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []

[dependencies]
embedded-hal = "0.2.4"
lazy_static = "1.4.0"
nb = "1.0.0"

[dev-dependencies]
test_support = {path = "test_support"}
